--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ pr:
 
 variables:
   buildConfiguration: 'Release'
-  azureServiceConnection: 'Project-1 Service Connection'   # ← keep quotes
+  azureServiceConnection: 'Project-1 Service Connection'   # keep quotes (spaces)
   appNameDev: 'mywebapp-dev'
   appNameStg: 'mywebapp-stg'
   appNamePrd: 'mywebapp-prd'
@@ -56,7 +56,7 @@ stages:
       displayName: 'Publish web project(s)'
       inputs:
         command: 'publish'
-        publishWebProjects: true           # picks up Web SDK projects under src/
+        publishWebProjects: true
         arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/web'
         zipAfterPublish: false
 
@@ -85,13 +85,17 @@ stages:
   condition: succeeded()
   jobs:
   - deployment: DeployWebToDev
-    environment: 'dev'   # add approvals in Pipelines > Environments if you want
+    environment: 'dev'
     strategy:
       runOnce:
         deploy:
           steps:
-          - download: current
-            artifact: $(artifactName)
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Download CI artifact (current run)'
+            inputs:
+              buildType: 'current'
+              artifact: '$(artifactName)'
+              targetPath: '$(Pipeline.Workspace)/$(artifactName)'
 
           - task: AzureWebApp@1
             displayName: 'Deploy to DEV App Service'
@@ -115,8 +119,12 @@ stages:
       runOnce:
         deploy:
           steps:
-          - download: current
-            artifact: $(artifactName)
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Download CI artifact (current run)'
+            inputs:
+              buildType: 'current'
+              artifact: '$(artifactName)'
+              targetPath: '$(Pipeline.Workspace)/$(artifactName)'
 
           - task: AzureWebApp@1
             displayName: 'Deploy to STG App Service'
@@ -140,8 +148,12 @@ stages:
       runOnce:
         deploy:
           steps:
-          - download: current
-            artifact: $(artifactName)
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Download CI artifact (current run)'
+            inputs:
+              buildType: 'current'
+              artifact: '$(artifactName)'
+              targetPath: '$(Pipeline.Workspace)/$(artifactName)'
 
           - task: AzureWebApp@1
             displayName: 'Deploy to PRD App Service'
