Updated azure-pipelines.yml for Azure Pipelines for artifact error

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,14 +56,14 @@ stages:
       displayName: 'Publish web project(s)'
       inputs:
         command: 'publish'
-        publishWebProjects: true
-        arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/web'
+        projects: 'src/DotNetWebApp/DotNetWebApp.csproj'
+        arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/publish'
         zipAfterPublish: false
 
     - task: ArchiveFiles@2
       displayName: 'Create deployment ZIP'
       inputs:
-        rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/web'
+        rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/publish'
         includeRootFolder: false
         archiveType: 'zip'
         archiveFile: '$(Build.ArtifactStagingDirectory)/$(artifactName).zip'
